--- a/src/2024-09-skos.ipynb
+++ b/src/2024-09-skos.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Turning topics into SKOS \n",
+    "## Turning topics into SKOS / STUB\n",
     "\n",
     "Memo: a skos format\n",
     "\n",
@@ -55,6 +55,81 @@
     "    skos:prefLabel \"Abstracts Collection\"@en .\n",
     "\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "# !pip install ontospy\n",
+    "import ontospy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load previously saved files\n",
+    "df_topics = pd.read_json(\"data/openalex_topics_2024_09.json\")\n",
+    "df_fields = pd.read_json(\"data/openalex_fields_2024_09.json\")\n",
+    "df_subfields = pd.read_json(\"data/openalex_subfields_2024_09.json\")\n",
+    "df_domains = pd.read_json(\"data/openalex_domains_2024_09.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = ontospy.OntoSKOSConcept(\"a\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k.triples = \"\"\"\n",
+    "\n",
+    "npg:hasRoot article-types:news-and-comment ;\n",
+    "    npg:id \"abstracts-collection\" ;\n",
+    "    npg:isLeaf true ;\n",
+    "    npg:isRoot false ;\n",
+    "    npg:treeDepth 2 ;\n",
+    "    a npg:ArticleType , skos:Concept ;\n",
+    "    rdfs:isDefinedBy <http://ns.nature.com/article-types/> ;\n",
+    "    skos:broader article-types:research-highlights ;\n",
+    "    skos:definition \"The :abstracts-collection article-type denotes a collection of abstracts from a recent conference.\"@en ;\n",
+    "    skos:inScheme <http://ns.nature.com/article-types/> ;\n",
+    "    skos:prefLabel \"Abstracts Collection\"@en .\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\nnpg:hasRoot article-types:news-and-comment ;\\n    npg:id \"abstracts-collection\" ;\\n    npg:isLeaf true ;\\n    npg:isRoot false ;\\n    npg:treeDepth 2 ;\\n    a npg:ArticleType , skos:Concept ;\\n    rdfs:isDefinedBy <http://ns.nature.com/article-types/> ;\\n    skos:broader article-types:research-highlights ;\\n    skos:definition \"The :abstracts-collection article-type denotes a collection of abstracts from a recent conference.\"@en ;\\n    skos:inScheme <http://ns.nature.com/article-types/> ;\\n    skos:prefLabel \"Abstracts Collection\"@en .\\n'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k"
    ]
   }
  ],
