--- a/src/2024-09-topics-explore.ipynb
+++ b/src/2024-09-topics-explore.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Topics and othe classifications in OpenAlex\n",
+    "\n",
+    "Notebook pulling all topics data and turning it into a `js` tree structure that can be used by [FoamTree](https://get.carrotsearch.com/foamtree/latest/demos/). "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -953,7 +962,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# to load\n",
+    "# load previously saved files\n",
     "df_topics = pd.read_json(\"data/openalex_topics_2024_09.json\")\n",
     "df_fields = pd.read_json(\"data/openalex_fields_2024_09.json\")\n",
     "df_subfields = pd.read_json(\"data/openalex_subfields_2024_09.json\")\n",
@@ -964,82 +973,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Turn into a foamtree structure / take 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Top level items:  252\n"
-     ]
-    }
-   ],
-   "source": [
-    "# df = df.reset_index()  # make sure indexes pair with number of rows\n",
-    "# {'id': ... 'display_name': ... children: []}\n",
+    "## Concat the dataframes\n",
     "\n",
-    "df = df_topics\n",
-    "out = []\n",
-    "level_name = \"subfield\" # \"subfield\"\n",
-    "\n",
-    "for index, row in df.head(50000).iterrows():\n",
-    "    child = {\"id\" : row['id'], \"label\" : row['display_name'], \"weight\": row[\"works_count\"]}\n",
-    "    \n",
-    "\n",
-    "    parent_id = row[level_name]['id']\n",
-    "\n",
-    "    flag = False\n",
-    "    for el in out:\n",
-    "        if el['id'] == parent_id:\n",
-    "            el[\"groups\"].append(child)\n",
-    "            flag = True\n",
-    "            break\n",
-    "\n",
-    "    if not flag: \n",
-    "        new_parent = {\"id\" : parent_id, \"label\" : row[level_name]['display_name']}\n",
-    "        new_parent[\"groups\"] = [child]\n",
-    "        # print(\"new_parent\", parent_id)\n",
-    "        out.append(new_parent)\n",
-    "        \n",
-    "\n",
-    "\n",
-    "# validation\n",
-    "print(\"Top level items: \", len(out))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#  \"groups\": [\n",
-    "#   {\n",
-    "#    \"groups\": [\n",
-    "#     {\n",
-    "#      \"label\": \"United States\",\n",
-    "#      \"weight\": 467098\n",
-    "#     },\n",
-    "\n",
-    "d = {}\n",
-    "d['groups'] = out\n",
-    "\n",
-    "import json\n",
-    "with open('data.json', 'w') as f:\n",
-    "    json.dump(d, f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Concat the dataframes"
+    "Simply concat all dataframes containing topics, domains etc.. for easier processings. "
    ]
   },
   {
@@ -1289,9 +1225,8 @@
     }
    ],
    "source": [
-    "# simply concat all dataframes for easier processings\n",
     "\n",
-    "# add a column \n",
+    "# add a 'type' column \n",
     "df_domains['entity_type'] = \"domains\"\n",
     "df_fields['entity_type'] = \"fields\"\n",
     "df_subfields['entity_type'] = \"subfields\"\n",
@@ -1308,7 +1243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Turn into a foam tree - all levels - take 2"
+    "## Turn into a foam tree data structure"
    ]
   },
   {
@@ -1329,14 +1264,15 @@
     "# {'id': ... , 'label': ...  , \"weight\": .... ,  groups: []}\n",
     "# see https://get.carrotsearch.com/foamtree/latest/demos/quick-start.html for an example\n",
     "#\n",
-    "# tip - use the head() control for testing\n",
+    "# tip - use the df.head() control for testing with less data\n",
     "#\n",
     "# foamtree json shape\n",
     "out = {\"id\":\"1\",\n",
     "       \"label\":\"Open Alex Topics\",\n",
     "       \"groups\": [] }\n",
     "\n",
-    "# use topic keywords to mimic another level \n",
+    "# flag to allow multiple runs of this cell to generate different versions of the dataset  \n",
+    "# topics have 'keywords' as a flat list, we can add them to the tree as a leaf level\n",
     "INCLUDE_KEYWORDS = True\n",
     "\n",
     "# domains\n",
@@ -2258,6 +2194,7 @@
     }
    ],
    "source": [
+    "# just testing\n",
     "out['groups'][1]"
    ]
   },
@@ -2281,8 +2218,12 @@
     "\"\"\"\n",
     "contents = template.format(data_json = json.dumps(out))\n",
     "\n",
-    "with open('data/openalex-topics-keywords-foamtree.js', 'w') as f:\n",
-    "    f.write(contents)"
+    "if INCLUDE_KEYWORDS:\n",
+    "    with open('data/openalex-topics-keywords-foamtree.js', 'w') as f:\n",
+    "        f.write(contents)\n",
+    "else:\n",
+    "    with open('data/openalex-topics-foamtree.js', 'w') as f:\n",
+    "        f.write(contents)"
    ]
   }
  ],
